bbb.io-kernel (1.20231123.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -363,47 +363,20 @@ Description: BeagleBoard.org 5.15-bone for am335x
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.38-bone23,
+Pre-Depends: linux-image-6.1.59-bone24,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.38-bone23
+Recommends: libpruio-modules-6.1.59-bone24
 Description: BeagleBoard.org 6.1-bone for am335x
  This metapackage will install linux-image-6.1-bone for am335x in Debian.
 
-Package: bbb.io-kernel-6.2-bone
+Package: bbb.io-kernel-6.6-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.2.16-bone14,
+Pre-Depends: linux-image-6.6.2-bone2,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.2.16-bone14
-Description: BeagleBoard.org 6.2-bone for am335x
- This metapackage will install linux-image-6.2-bone for am335x in Debian.
-
-Package: bbb.io-kernel-6.3-bone
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.3.13-bone17,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.3.13-bone17
-Description: BeagleBoard.org 6.3-bone for am335x
- This metapackage will install linux-image-6.3-bone for am335x in Debian.
-
-Package: bbb.io-kernel-6.4-bone
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.4.15-bone15,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.4.15-bone15
-Description: BeagleBoard.org 6.4-bone for am335x
- This metapackage will install linux-image-6.4-bone for am335x in Debian.
-
-Package: bbb.io-kernel-6.5-bone
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.5.3-bone10,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.5.3-bone10
-Description: BeagleBoard.org 6.5-bone for am335x
- This metapackage will install linux-image-6.5-bone for am335x in Debian.
+Recommends: libpruio-modules-6.6.2-bone2
+Description: BeagleBoard.org 6.6-bone for am335x
+ This metapackage will install linux-image-6.6-bone for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-bone-rt
 Section: metapackages
@@ -426,11 +399,20 @@ Description: BeagleBoard.org 5.15-bone-rt for am335x
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.38-bone-rt-r23,
+Pre-Depends: linux-image-6.1.59-bone-rt-r24,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.38-bone-rt-r23
+Recommends: libpruio-modules-6.1.59-bone-rt-r24
 Description: BeagleBoard.org 6.1-bone-rt for am335x
  This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.0-bone-rt-r2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.0-bone-rt-r2
+Description: BeagleBoard.org 6.6-bone-rt for am335x
+ This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-5.10-armv7
 Section: metapackages
@@ -450,6 +432,24 @@ Recommends: libpruio-modules-5.15.137-armv7-x41
 Description: BeagleBoard.org 5.15-armv7 for armv7
  This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
 
+Package: bbb.io-kernel-6.1-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.59-armv7-x1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.59-armv7-x1
+Description: BeagleBoard.org 6.1-armv7 for armv7
+ This metapackage will install linux-image-6.1-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.2-armv7-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.2-armv7-x2
+Description: BeagleBoard.org 6.6-armv7 for armv7
+ This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
+
 Package: bbb.io-kernel-5.10-armv7-rt
 Section: metapackages
 Architecture: armhf
@@ -468,6 +468,24 @@ Recommends: libpruio-modules-5.15.137-armv7-rt-x41
 Description: BeagleBoard.org 5.15-armv7-rt for armv7
  This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
 
+Package: bbb.io-kernel-6.1-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.59-armv7-rt-x1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.59-armv7-rt-x1
+Description: BeagleBoard.org 6.1-armv7-rt for armv7
+ This metapackage will install linux-image-6.1-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.0-armv7-rt-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.0-armv7-rt-x2
+Description: BeagleBoard.org 6.6-armv7-rt for armv7
+ This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
+
 Package: bbb.io-kernel-5.10-armv7-lpae
 Section: metapackages
 Architecture: armhf
@@ -485,3 +503,66 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-5.15.137-armv7-lpae-x41
 Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-6.1-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.59-armv7-lpae-x1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.59-armv7-lpae-x1
+Description: BeagleBoard.org 6.1-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.1-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.2-armv7-lpae-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.2-armv7-lpae-x2
+Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.16-bone15,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.16-bone15
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.3-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.3.13-bone18,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.3.13-bone18
+Description: BeagleBoard.org 6.3-bone for am335x
+ This metapackage will install linux-image-6.3-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.4.16-bone16,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.4.16-bone16
+Description: BeagleBoard.org 6.4-bone for am335x
+ This metapackage will install linux-image-6.4-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.5-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.5.12-bone11,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.5.12-bone11
+Description: BeagleBoard.org 6.5-bone for am335x
+ This metapackage will install linux-image-6.5-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.7-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.7.0-rc2-bone2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.7.0-rc2-bone2
+Description: BeagleBoard.org 6.7-bone for am335x
+ This metapackage will install linux-image-6.7-bone for am335x in Debian.
