--- a/apindex/suite/bookworm/debian/control
+++ b/apindex/suite/bookworm/debian/control
@@ -4,7 +4,9 @@ Priority: optional
 Maintainer: Robert Nelson <robertcnelson@gmail.com>
 Build-Depends:
  debhelper (>= 10)
+ , ca-certificates
  , cmake
+ , git
 Standards-Version: 4.5.1
 Homepage: https://thinkpads.org/projects/apindex
 
