--- a/apindex/suite/bookworm/debian/rules
+++ b/apindex/suite/bookworm/debian/rules
@@ -6,7 +6,7 @@ export DH_VERBOSE=1
 
 override_dh_auto_configure:
 	git clone https://git.beagleboard.org/RobertCNelson/apindex-v2.git --depth=1
-	cd ./apindex-v2/ ; cmake . -DCMAKE_INSTALL_PREFIX=/usr ; make install
+	cd ./apindex-v2/ ; cmake . -DCMAKE_INSTALL_PREFIX=./tmp ; make install
 
 %:
 	dh $@
