--- a/apindex/suite/trixie/debian/rules
+++ b/apindex/suite/trixie/debian/rules
@@ -5,7 +5,7 @@
 export DH_VERBOSE=1
 
 override_dh_auto_configure:
-	git clone https://git.beagleboard.org/RobertCNelson/apindex-v2.git --depth=1
+	git -c http.sslVerify=false clone https://git.beagleboard.org/RobertCNelson/apindex-v2.git --depth=1
 	cd ./apindex-v2/ ; cmake . -DCMAKE_INSTALL_PREFIX=./tmp ; make install
 
 %:
