--- a/bbb.io-kernel/suite/noble/debian/control
+++ b/bbb.io-kernel/suite/noble/debian/control
@@ -16,6 +16,69 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-6.4-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.4.16-bone17,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.4.16-bone17
+Description: BeagleBoard.org 6.4-bone for am335x
+ This metapackage will install linux-image-6.4-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.5-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.5.13-bone12,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.5.13-bone12
+Description: BeagleBoard.org 6.5-bone for am335x
+ This metapackage will install linux-image-6.5-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-bone3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-bone3
+Description: BeagleBoard.org 6.6-bone for am335x
+ This metapackage will install linux-image-6.6-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-bone-rt-r3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-bone-rt-r3
+Description: BeagleBoard.org 6.6-bone-rt for am335x
+ This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-x3
+Description: BeagleBoard.org 6.6-armv7 for armv7
+ This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-rt-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-rt-x3
+Description: BeagleBoard.org 6.6-armv7-rt for armv7
+ This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-lpae-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-lpae-x3
+Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
+
 Package: bbb.io-kernel-6.7-bone
 Section: metapackages
 Architecture: armhf
