--- a/bbb.io-kernel/suite/buster/debian/control
+++ b/bbb.io-kernel/suite/buster/debian/control
@@ -707,12 +707,21 @@ Recommends: libpruio-modules-6.0.19-bone15
 Description: BeagleBoard.org 6.0-bone for am335x
  This metapackage will install linux-image-6.0-bone for am335x in Debian.
 
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.16-bone16,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.16-bone16
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
+
 Package: bbb.io-kernel-6.3-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.3.13-bone18,
+Pre-Depends: linux-image-6.3.13-bone25,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.3.13-bone18
+Recommends: libpruio-modules-6.3.13-bone25
 Description: BeagleBoard.org 6.3-bone for am335x
  This metapackage will install linux-image-6.3-bone for am335x in Debian.
 
