--- a/bbb.io-kernel/suite/noble/debian/control
+++ b/bbb.io-kernel/suite/noble/debian/control
@@ -16,6 +16,24 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-6.2-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.2.16-bone16,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.2.16-bone16
+Description: BeagleBoard.org 6.2-bone for am335x
+ This metapackage will install linux-image-6.2-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.3-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.3.13-bone25,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.3.13-bone25
+Description: BeagleBoard.org 6.3-bone for am335x
+ This metapackage will install linux-image-6.3-bone for am335x in Debian.
+
 Package: bbb.io-kernel-6.4-bone
 Section: metapackages
 Architecture: armhf
