bbb.io-kernel (1.20231217.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/control
+++ b/bbb.io-kernel/suite/noble/debian/control
@@ -16,6 +16,258 @@ Depends:
 Description: BeagleBoard.org Kernel Branches
  This package contains tasksel information for the BeagleBoard.org Kernel Branch.
 
+Package: bbb.io-kernel-5.10-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.168-ti-r74
+Description: BeagleBoard.org 5.10-ti
+ This metapackage will install linux-image-5.10-ti in Debian.
+
+Package: bbb.io-kernel-5.10-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-r74
+ , ti-sgx-ti335x-modules-5.10.168-ti-r74
+ , rtl8723bu-modules-5.10.168-ti-r74
+ , rtl8723du-modules-5.10.168-ti-r74
+ , rtl8821cu-modules-5.10.168-ti-r74
+ , qcacld-2.0-modules-5.10.168-ti-r74
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 5.10-ti for am335x
+ This metapackage will install linux-image-5.10-ti for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-r74
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-r74
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 5.10-ti for am57xx
+ This metapackage will install linux-image-5.10-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.168-ti-rt-r74
+Description: BeagleBoard.org 5.10-ti-rt
+ This metapackage will install linux-image-5.10-ti-rt in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-rt-r74
+ , ti-sgx-ti335x-modules-5.10.168-ti-rt-r74
+ , rtl8723bu-modules-5.10.168-ti-rt-r74
+ , rtl8723du-modules-5.10.168-ti-rt-r74
+ , rtl8821cu-modules-5.10.168-ti-rt-r74
+ , qcacld-2.0-modules-5.10.168-ti-rt-r74
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 5.10-ti-rt for am335x
+ This metapackage will install linux-image-5.10-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.168-ti-rt-r74
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-5.10.168-ti-rt-r74
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-rt-r74
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 5.10-ti-rt for am57xx
+ This metapackage will install linux-image-5.10-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.46-ti-r14
+Description: BeagleBoard.org 6.1-ti
+ This metapackage will install linux-image-6.1-ti in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.46-ti-r14
+ , rtl8723du-modules-6.1.46-ti-r14
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti for am335x
+ This metapackage will install linux-image-6.1-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.46-ti-r14
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti for am57xx
+ This metapackage will install linux-image-6.1-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-rt-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.46-ti-rt-r14
+Description: BeagleBoard.org 6.1-ti-rt
+ This metapackage will install linux-image-6.1-ti-rt in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-rt-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.46-ti-rt-r14
+ , rtl8723du-modules-6.1.46-ti-rt-r14
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.1-ti-rt for am335x
+ This metapackage will install linux-image-6.1-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.46-ti-rt-r14
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.1.46-ti-rt-r14
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.1-ti-rt for am57xx
+ This metapackage will install linux-image-6.1-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-6.1-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.67-bone25,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.67-bone25
+Description: BeagleBoard.org 6.1-bone for am335x
+ This metapackage will install linux-image-6.1-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-bone3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-bone3
+Description: BeagleBoard.org 6.6-bone for am335x
+ This metapackage will install linux-image-6.6-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.67-bone-rt-r25,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.67-bone-rt-r25
+Description: BeagleBoard.org 6.1-bone-rt for am335x
+ This metapackage will install linux-image-6.1-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-bone-rt-r3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-bone-rt-r3
+Description: BeagleBoard.org 6.6-bone-rt for am335x
+ This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.1-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.67-armv7-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.67-armv7-x2
+Description: BeagleBoard.org 6.1-armv7 for armv7
+ This metapackage will install linux-image-6.1-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-x3
+Description: BeagleBoard.org 6.6-armv7 for armv7
+ This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-6.1-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.67-armv7-rt-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.67-armv7-rt-x2
+Description: BeagleBoard.org 6.1-armv7-rt for armv7
+ This metapackage will install linux-image-6.1-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-rt-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-rt-x3
+Description: BeagleBoard.org 6.6-armv7-rt for armv7
+ This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-6.1-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.1.67-armv7-lpae-x2,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.1.67-armv7-lpae-x2
+Description: BeagleBoard.org 6.1-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.1-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-6.6-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.6-armv7-lpae-x3,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.6-armv7-lpae-x3
+Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
+
 Package: bbb.io-kernel-6.2-bone
 Section: metapackages
 Architecture: armhf
@@ -51,51 +303,6 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.5.13-bone12
 Description: BeagleBoard.org 6.5-bone for am335x
  This metapackage will install linux-image-6.5-bone for am335x in Debian.
-
-Package: bbb.io-kernel-6.6-bone
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.6.6-bone3,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.6-bone3
-Description: BeagleBoard.org 6.6-bone for am335x
- This metapackage will install linux-image-6.6-bone for am335x in Debian.
-
-Package: bbb.io-kernel-6.6-bone-rt
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.6.6-bone-rt-r3,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.6-bone-rt-r3
-Description: BeagleBoard.org 6.6-bone-rt for am335x
- This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
-
-Package: bbb.io-kernel-6.6-armv7
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.6.6-armv7-x3,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.6-armv7-x3
-Description: BeagleBoard.org 6.6-armv7 for armv7
- This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
-
-Package: bbb.io-kernel-6.6-armv7-rt
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.6.6-armv7-rt-x3,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.6-armv7-rt-x3
-Description: BeagleBoard.org 6.6-armv7-rt for armv7
- This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
-
-Package: bbb.io-kernel-6.6-armv7-lpae
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-6.6.6-armv7-lpae-x3,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.6-armv7-lpae-x3
-Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
- This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
 
 Package: bbb.io-kernel-6.7-bone
 Section: metapackages
