generic-sys-mods (1.20240111.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/focal/debian/control
+++ b/generic-sys-mods/suite/focal/debian/control
@@ -16,5 +16,6 @@ Depends:
  , e2fsprogs
  , bsdmainutils
  , net-tools
+ , unattended-upgrades
 Description: System tweaks for the Generic Systems
  Various modifications to improve the performance or user experience.
