--- a/generic-sys-mods/suite/jammy/debian/control
+++ b/generic-sys-mods/suite/jammy/debian/control
@@ -16,5 +16,6 @@ Depends:
  , e2fsprogs
  , bsdmainutils
  , net-tools
+ , unattended-upgrades
 Description: System tweaks for the Generic Systems
  Various modifications to improve the performance or user experience.
