rcnee-internal-testlab (1.20240112.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bookworm/debian/control
+++ b/rcnee-internal-testlab/suite/bookworm/debian/control
@@ -11,6 +11,7 @@ Package: rcnee-internal-testlab
 Architecture: armhf
 Depends:
  bsdextrautils
+ , can-utils
  , default-jre-headless
  , gpiod
  , lsb-release
