--- a/rcnee-internal-testlab/suite/trixie/debian/control
+++ b/rcnee-internal-testlab/suite/trixie/debian/control
@@ -11,6 +11,7 @@ Package: rcnee-internal-testlab
 Architecture: armhf
 Depends:
  bsdextrautils
+ , can-utils
  , default-jre-headless
  , gpiod
  , lsb-release
