--- a/debian-12-libusbgx/suite/bookworm/debian/rules
+++ b/debian-12-libusbgx/suite/bookworm/debian/rules
@@ -1,11 +1,21 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
 
-DEB_BUILD_OPTIONS=noautodbgsym
-
-# Uncomment this to turn on verbose mode.
-export DH_VERBOSE=1
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh $@ --with autoreconf
+	dh $@
 
+override_dh_auto_install-indep:
+	dh_installdocs --indep -plibusbgx-doc \
+		doxygen-doc/html
+	dh_doxygen --indep -plibusbgx-doc
+
+override_dh_auto_configure:
+	dh_auto_configure -- \
+		--disable-examples
+
+execute_after_dh_auto_build:
+		$(MAKE) doxygen-run
+
+override_dh_builddeb:
+	dh_builddeb -- -Zxz
