bbb.io-kernel (1.20240123.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/control
+++ b/bbb.io-kernel/suite/noble/debian/control
@@ -19,28 +19,28 @@ Description: BeagleBoard.org Kernel Branches
 Package: bbb.io-kernel-5.10-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.168-ti-r75
+Pre-Depends: linux-image-5.10.168-ti-r76
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.10.168-ti-r75
+Recommends: libpruio-modules-5.10.168-ti-r76
 Description: BeagleBoard.org 5.10-ti
  This metapackage will install linux-image-5.10-ti in Debian.
 
 Package: bbb.io-kernel-5.10-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.168-ti-r75
+Pre-Depends: linux-image-5.10.168-ti-r76
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-r75
- , ti-sgx-ti335x-modules-5.10.168-ti-r75
- , rtl8723bu-modules-5.10.168-ti-r75
- , rtl8723du-modules-5.10.168-ti-r75
- , rtl8821cu-modules-5.10.168-ti-r75
- , qcacld-2.0-modules-5.10.168-ti-r75
+ libpruio-modules-5.10.168-ti-r76
+ , ti-sgx-ti335x-modules-5.10.168-ti-r76
+ , rtl8723bu-modules-5.10.168-ti-r76
+ , rtl8723du-modules-5.10.168-ti-r76
+ , rtl8821cu-modules-5.10.168-ti-r76
+ , qcacld-2.0-modules-5.10.168-ti-r76
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 5.10-ti for am335x
  This metapackage will install linux-image-5.10-ti for am335x in Debian.
@@ -48,13 +48,13 @@ Description: BeagleBoard.org 5.10-ti for am335x
 Package: bbb.io-kernel-5.10-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-5.10.168-ti-r75
+Pre-Depends: linux-image-5.10.168-ti-r76
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-5.10.168-ti-r75
- , ti-sgx-jacinto6evm-modules-5.10.168-ti-r75
+ libpruio-modules-5.10.168-ti-r76
+ , ti-sgx-jacinto6evm-modules-5.10.168-ti-r76
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 5.10-ti for am57xx
  This metapackage will install linux-image-5.10-ti for am57xx in Debian.
@@ -307,8 +307,17 @@ Description: BeagleBoard.org 6.5-bone for am335x
 Package: bbb.io-kernel-6.7-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.7.0-bone9,
+Pre-Depends: linux-image-6.7.1-bone10,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.7.0-bone9
+Recommends: libpruio-modules-6.7.1-bone10
 Description: BeagleBoard.org 6.7-bone for am335x
  This metapackage will install linux-image-6.7-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.8-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.8.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.8.0-rc1-bone1
+Description: BeagleBoard.org 6.8-bone for am335x
+ This metapackage will install linux-image-6.8-bone for am335x in Debian.
