--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -561,8 +561,17 @@ Description: BeagleBoard.org 6.5-bone for am335x
 Package: bbb.io-kernel-6.7-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.7.0-bone9,
+Pre-Depends: linux-image-6.7.1-bone10,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.7.0-bone9
+Recommends: libpruio-modules-6.7.1-bone10
 Description: BeagleBoard.org 6.7-bone for am335x
  This metapackage will install linux-image-6.7-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.8-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.8.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.8.0-rc1-bone1
+Description: BeagleBoard.org 6.8-bone for am335x
+ This metapackage will install linux-image-6.8-bone for am335x in Debian.
