--- a/bbb.io-kernel/suite/noble/debian/control
+++ b/bbb.io-kernel/suite/noble/debian/control
@@ -105,24 +105,24 @@ Description: BeagleBoard.org 5.10-ti-rt for am57xx
 Package: bbb.io-kernel-6.1-ti
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-r26
+Pre-Depends: linux-image-6.1.80-ti-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.69-ti-r26
+Recommends: libpruio-modules-6.1.80-ti-r34
 Description: BeagleBoard.org 6.1-ti
  This metapackage will install linux-image-6.1-ti in Debian.
 
 Package: bbb.io-kernel-6.1-ti-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-r26
+Pre-Depends: linux-image-6.1.80-ti-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.69-ti-r26
- , rtl8723du-modules-6.1.69-ti-r26
+ libpruio-modules-6.1.80-ti-r34
+ , rtl8723du-modules-6.1.80-ti-r34
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 6.1-ti for am335x
  This metapackage will install linux-image-6.1-ti for am335x in Debian.
@@ -130,12 +130,12 @@ Description: BeagleBoard.org 6.1-ti for am335x
 Package: bbb.io-kernel-6.1-ti-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-r26
+Pre-Depends: linux-image-6.1.80-ti-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.69-ti-r26
+ libpruio-modules-6.1.80-ti-r34
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 6.1-ti for am57xx
  This metapackage will install linux-image-6.1-ti for am57xx in Debian.
@@ -143,24 +143,24 @@ Description: BeagleBoard.org 6.1-ti for am57xx
 Package: bbb.io-kernel-6.1-ti-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-rt-r26
+Pre-Depends: linux-image-6.1.80-ti-rt-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.1.69-ti-rt-r26
+Recommends: libpruio-modules-6.1.80-ti-rt-r34
 Description: BeagleBoard.org 6.1-ti-rt
  This metapackage will install linux-image-6.1-ti-rt in Debian.
 
 Package: bbb.io-kernel-6.1-ti-rt-am335x
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-rt-r26
+Pre-Depends: linux-image-6.1.80-ti-rt-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.69-ti-rt-r26
- , rtl8723du-modules-6.1.69-ti-rt-r26
+ libpruio-modules-6.1.80-ti-rt-r34
+ , rtl8723du-modules-6.1.80-ti-rt-r34
  , bb-u-boot-am335x-evm
 Description: BeagleBoard.org 6.1-ti-rt for am335x
  This metapackage will install linux-image-6.1-ti-rt for am335x in Debian.
@@ -168,15 +168,33 @@ Description: BeagleBoard.org 6.1-ti-rt for am335x
 Package: bbb.io-kernel-6.1-ti-rt-am57xx
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.1.69-ti-rt-r26
+Pre-Depends: linux-image-6.1.80-ti-rt-r34
 Depends:
  ${misc:Depends}
  , bbb.io-kernel-tasks (= ${source:Version})
 Recommends:
- libpruio-modules-6.1.69-ti-rt-r26
+ libpruio-modules-6.1.80-ti-rt-r34
  , bb-u-boot-am57xx-evm
 Description: BeagleBoard.org 6.1-ti-rt for am57xx
  This metapackage will install linux-image-6.1-ti-rt for am57xx in Debian.
+
+Package: bbb.io-kernel-5.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.212-bone78,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.212-bone78
+Description: BeagleBoard.org 5.10-bone for am335x
+ This metapackage will install linux-image-5.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.148-bone42,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.148-bone42
+Description: BeagleBoard.org 5.15-bone for am335x
+ This metapackage will install linux-image-5.15-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.1-bone
 Section: metapackages
@@ -190,11 +208,29 @@ Description: BeagleBoard.org 6.1-bone for am335x
 Package: bbb.io-kernel-6.6-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.6.20-bone11,
+Pre-Depends: linux-image-6.6.21-bone12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.20-bone11
+Recommends: libpruio-modules-6.6.21-bone12
 Description: BeagleBoard.org 6.6-bone for am335x
  This metapackage will install linux-image-6.6-bone for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.212-bone-rt-r78,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.212-bone-rt-r78
+Description: BeagleBoard.org 5.10-bone-rt for am335x
+ This metapackage will install linux-image-5.10-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.15-bone-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.148-bone-rt-r42,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.148-bone-rt-r42
+Description: BeagleBoard.org 5.15-bone-rt for am335x
+ This metapackage will install linux-image-5.15-bone-rt for am335x in Debian.
 
 Package: bbb.io-kernel-6.1-bone-rt
 Section: metapackages
@@ -208,11 +244,29 @@ Description: BeagleBoard.org 6.1-bone-rt for am335x
 Package: bbb.io-kernel-6.6-bone-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.6.20-bone-rt-r11,
+Pre-Depends: linux-image-6.6.21-bone-rt-r12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.20-bone-rt-r11
+Recommends: libpruio-modules-6.6.21-bone-rt-r12
 Description: BeagleBoard.org 6.6-bone-rt for am335x
  This metapackage will install linux-image-6.6-bone-rt for am335x in Debian.
+
+Package: bbb.io-kernel-5.10-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.212-armv7-x78,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.212-armv7-x78
+Description: BeagleBoard.org 5.10-armv7 for armv7
+ This metapackage will install linux-image-5.10-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.148-armv7-x42,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.148-armv7-x42
+Description: BeagleBoard.org 5.15-armv7 for armv7
+ This metapackage will install linux-image-5.15-armv7 for armv7 in Debian.
 
 Package: bbb.io-kernel-6.1-armv7
 Section: metapackages
@@ -226,11 +280,29 @@ Description: BeagleBoard.org 6.1-armv7 for armv7
 Package: bbb.io-kernel-6.6-armv7
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.6.20-armv7-x11,
+Pre-Depends: linux-image-6.6.21-armv7-x12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.20-armv7-x11
+Recommends: libpruio-modules-6.6.21-armv7-x12
 Description: BeagleBoard.org 6.6-armv7 for armv7
  This metapackage will install linux-image-6.6-armv7 for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.212-armv7-rt-x78,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.212-armv7-rt-x78
+Description: BeagleBoard.org 5.10-armv7-rt for armv7
+ This metapackage will install linux-image-5.10-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.148-armv7-rt-x42,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.148-armv7-rt-x42
+Description: BeagleBoard.org 5.15-armv7-rt for armv7
+ This metapackage will install linux-image-5.15-armv7-rt for armv7 in Debian.
 
 Package: bbb.io-kernel-6.1-armv7-rt
 Section: metapackages
@@ -244,11 +316,29 @@ Description: BeagleBoard.org 6.1-armv7-rt for armv7
 Package: bbb.io-kernel-6.6-armv7-rt
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.6.20-armv7-rt-x11,
+Pre-Depends: linux-image-6.6.21-armv7-rt-x12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.20-armv7-rt-x11
+Recommends: libpruio-modules-6.6.21-armv7-rt-x12
 Description: BeagleBoard.org 6.6-armv7-rt for armv7
  This metapackage will install linux-image-6.6-armv7-rt for armv7 in Debian.
+
+Package: bbb.io-kernel-5.10-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.10.212-armv7-lpae-x78,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.10.212-armv7-lpae-x78
+Description: BeagleBoard.org 5.10-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.10-armv7-lpae for armv7-lpae in Debian.
+
+Package: bbb.io-kernel-5.15-armv7-lpae
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-5.15.148-armv7-lpae-x42,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-5.15.148-armv7-lpae-x42
+Description: BeagleBoard.org 5.15-armv7-lpae for armv7-lpae
+ This metapackage will install linux-image-5.15-armv7-lpae for armv7-lpae in Debian.
 
 Package: bbb.io-kernel-6.1-armv7-lpae
 Section: metapackages
@@ -262,9 +352,9 @@ Description: BeagleBoard.org 6.1-armv7-lpae for armv7-lpae
 Package: bbb.io-kernel-6.6-armv7-lpae
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.6.20-armv7-lpae-x11,
+Pre-Depends: linux-image-6.6.21-armv7-lpae-x12,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.6.20-armv7-lpae-x11
+Recommends: libpruio-modules-6.6.21-armv7-lpae-x12
 Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
 
@@ -307,17 +397,17 @@ Description: BeagleBoard.org 6.5-bone for am335x
 Package: bbb.io-kernel-6.7-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.7.9-bone16,
+Pre-Depends: linux-image-6.7.10-bone17,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.7.9-bone16
+Recommends: libpruio-modules-6.7.10-bone17
 Description: BeagleBoard.org 6.7-bone for am335x
  This metapackage will install linux-image-6.7-bone for am335x in Debian.
 
 Package: bbb.io-kernel-6.8-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.8.0-bone7,
+Pre-Depends: linux-image-6.8.1-bone8,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.8.0-bone7
+Recommends: libpruio-modules-6.8.1-bone8
 Description: BeagleBoard.org 6.8-bone for am335x
  This metapackage will install linux-image-6.8-bone for am335x in Debian.
