--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -575,3 +575,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.8.1-bone8
 Description: BeagleBoard.org 6.8-bone for am335x
  This metapackage will install linux-image-6.8-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.9-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.9.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.9.0-rc1-bone1
+Description: BeagleBoard.org 6.9-bone for am335x
+ This metapackage will install linux-image-6.9-bone for am335x in Debian.
