--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -653,15 +653,6 @@ Recommends: libpruio-modules-6.6.21-armv7-lpae-x12
 Description: BeagleBoard.org 6.6-armv7-lpae for armv7-lpae
  This metapackage will install linux-image-6.6-armv7-lpae for armv7-lpae in Debian.
 
-Package: bbb.io-kernel-5.14-bone
-Section: metapackages
-Architecture: armhf
-Pre-Depends: linux-image-5.14.21-bone31,
-Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-5.14.21-bone31
-Description: BeagleBoard.org 5.14-bone for am335x
- This metapackage will install linux-image-5.14-bone for am335x in Debian.
-
 Package: bbb.io-kernel-5.16-bone
 Section: metapackages
 Architecture: armhf
@@ -760,3 +751,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.8.1-bone8
 Description: BeagleBoard.org 6.8-bone for am335x
  This metapackage will install linux-image-6.8-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.9-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.9.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.9.0-rc1-bone1
+Description: BeagleBoard.org 6.9-bone for am335x
+ This metapackage will install linux-image-6.9-bone for am335x in Debian.
