--- a/bb-code-server/suite/jammy/debian/control
+++ b/bb-code-server/suite/jammy/debian/control
@@ -11,10 +11,9 @@ Package: bb-code-server
 Architecture: armhf
 Pre-Depends:
  ${misc:Pre-Depends}
- , bbb.io-vsx-examples
  , libatomic1
 Depends:
- systemd (>= 230)
+ systemd
  , dphys-swapfile
 Description: code-server installer for beagleboard.org
  code-server is a tool to Run VS Code on any machine anywhere and access it in the browser.
