--- a/bb-code-server/suite/trixie/debian/rules
+++ b/bb-code-server/suite/trixie/debian/rules
@@ -31,3 +31,6 @@ override_dh_systemd_enable:
 
 override_dh_systemd_start:
 	dh_systemd_start --name=bb-code-server --no-start
+
+override_dh_builddeb:
+	dh_builddeb -- -Zzstd
