--- a/bb-code-server/suite/bookworm/debian/rules
+++ b/bb-code-server/suite/bookworm/debian/rules
@@ -33,4 +33,4 @@ override_dh_systemd_start:
 	dh_systemd_start --name=bb-code-server --no-start
 
 override_dh_builddeb:
-	dh_builddeb -- -Zzstd
+	dh_builddeb -- -Zgzip
