bb-usb-gadgets (1.20240403.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-usb-gadgets/suite/bullseye/debian/rules
+++ b/bb-usb-gadgets/suite/bullseye/debian/rules
@@ -17,4 +17,4 @@ override_dh_systemd_start:
 	dh_systemd_start --name=bb-usb-gadgets --no-start
 
 override_dh_builddeb:
-	dh_builddeb -- -Zxz
+	dh_builddeb -- -Zgzip
