--- a/bb-usb-gadgets/suite/focal/debian/rules
+++ b/bb-usb-gadgets/suite/focal/debian/rules
@@ -17,4 +17,4 @@ override_dh_systemd_start:
 	dh_systemd_start --name=bb-usb-gadgets --no-start
 
 override_dh_builddeb:
-	dh_builddeb -- -Zxz
+	dh_builddeb -- -Zgzip
