--- a/generic-sys-mods/suite/focal/debian/control
+++ b/generic-sys-mods/suite/focal/debian/control
@@ -11,11 +11,20 @@ Architecture: armhf
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
- , systemd (>= 230)
+ , systemd
+ , console-setup-linux
  , cloud-guest-utils
+ , dos2unix
  , e2fsprogs
  , bsdmainutils
  , net-tools
+ , gzip
+ , whiptail
+ , parted
+ , passwd
+ , lua5.1
+ , psmisc
+ , iw
  , unattended-upgrades
 Description: System tweaks for the Generic Systems
  Various modifications to improve the performance or user experience.
