--- a/generic-sys-mods/suite/bullseye/debian/control
+++ b/generic-sys-mods/suite/bullseye/debian/control
@@ -12,13 +12,16 @@ Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
  , systemd
+ , console-setup-linux
  , cloud-guest-utils
+ , dos2unix
  , e2fsprogs
  , bsdextrautils
  , net-tools
  , gzip
  , whiptail
  , parted
+ , passwd
  , lua5.1
  , psmisc
  , iw
