generic-sys-mods (1.20240516.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/bookworm/debian/generic-sys-mods.bbbio-set-sysconf.service
+++ b/generic-sys-mods/suite/bookworm/debian/generic-sys-mods.bbbio-set-sysconf.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=BeagleBoard Set up system configuration
-Requires=boot-firmware.mount
-After=boot-firmware.mount
+Before=ssh.service
 
 [Service]
 Type=oneshot
