--- a/generic-sys-mods/suite/noble/debian/generic-sys-mods.bbbio-set-sysconf.service
+++ b/generic-sys-mods/suite/noble/debian/generic-sys-mods.bbbio-set-sysconf.service
@@ -5,6 +5,7 @@ Before=ssh.service
 [Service]
 Type=oneshot
 ExecStart=/usr/sbin/bbbio-set-sysconf
+StandardOutput=journal+console
 
 [Install]
 RequiredBy=basic.target
