bbb.io-kernel (1.20240617.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -383,6 +383,80 @@ Recommends:
 Description: BeagleBoard.org 6.1-ti-rt for am57xx
  This metapackage will install linux-image-6.1-ti-rt for am57xx in Debian.
 
+Package: bbb.io-kernel-6.6-ti
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.32-ti-arm32-r4
+Description: BeagleBoard.org 6.6-ti
+ This metapackage will install linux-image-6.6-ti in Debian.
+
+Package: bbb.io-kernel-6.6-ti-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.6.32-ti-arm32-r4
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.6-ti for am335x
+ This metapackage will install linux-image-6.6-ti for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-ti-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.6.32-ti-arm32-r4
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.6-ti for am57xx
+ This metapackage will install linux-image-6.6-ti for am57xx in Debian.
+
+Package: bbb.io-kernel-6.6-ti-rt
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-rt-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.6.32-ti-rt-arm32-r4
+Description: BeagleBoard.org 6.6-ti-rt
+ This metapackage will install linux-image-6.6-ti-rt in Debian.
+
+Package: bbb.io-kernel-6.6-ti-rt-am335x
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-rt-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.6.32-ti-rt-arm32-r4
+ , bb-u-boot-am335x-evm
+Description: BeagleBoard.org 6.6-ti-rt for am335x
+ This metapackage will install linux-image-6.6-ti-rt for am335x in Debian.
+
+Package: bbb.io-kernel-6.6-ti-rt-am57xx
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.6.32-ti-rt-arm32-r4
+Depends:
+ ${misc:Depends}
+ , bbb.io-kernel-tasks (= ${source:Version})
+Recommends:
+ libpruio-modules-6.6.32-ti-rt-arm32-r4
+ , bb-u-boot-am57xx-evm
+Description: BeagleBoard.org 6.6-ti-rt for am57xx
+ This metapackage will install linux-image-6.6-ti-rt for am57xx in Debian.
+
 Package: bbb.io-kernel-4.19-bone
 Section: metapackages
 Architecture: armhf
@@ -755,8 +829,17 @@ Description: BeagleBoard.org 6.8-bone for am335x
 Package: bbb.io-kernel-6.9-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.9.0-bone8,
+Pre-Depends: linux-image-6.9.5-bone9,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.9.0-bone8
+Recommends: libpruio-modules-6.9.5-bone9
 Description: BeagleBoard.org 6.9-bone for am335x
  This metapackage will install linux-image-6.9-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.10-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.10.0-rc4-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.10.0-rc4-bone1
+Description: BeagleBoard.org 6.10-bone for am335x
+ This metapackage will install linux-image-6.10-bone for am335x in Debian.
