bb-usb-gadgets (1.20240703.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-usb-gadgets/suite/noble/debian/control
+++ b/bb-usb-gadgets/suite/noble/debian/control
@@ -8,14 +8,11 @@ Standards-Version: 4.5.1
 
 Package: bb-usb-gadgets
 Architecture: all
-Pre-Depends:
- gt
- , libusbgx
 Depends:
  ${shlibs:Depends}
  , ${misc:Depends}
  , bc
- , systemd
+ , systemd-dev
  , generic-sys-mods
 Description: usb gadget customizations
  usb gadget customizations
