--- a/debian-12-iwd/suite/noble/debian/rules
+++ b/debian-12-iwd/suite/noble/debian/rules
@@ -2,7 +2,7 @@
 
 DEB_BUILD_OPTIONS=noautodbgsym
 
-export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all optimize=-lto
 
 # skip tests failing on official build daemons:
 #  * test-wsc: unit/test-wsc.c:435: wsc_test_uuid_from_addr: Assertion `wsc_uuid_from_addr(test->addr, uuid)' failed.
