bbb.io-kernel (1.20240715.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/control
+++ b/bbb.io-kernel/suite/bullseye/debian/control
@@ -838,8 +838,8 @@ Description: BeagleBoard.org 6.9-bone for am335x
 Package: bbb.io-kernel-6.10-bone
 Section: metapackages
 Architecture: armhf
-Pre-Depends: linux-image-6.10.0-rc7-bone4,
+Pre-Depends: linux-image-6.10.0-bone5,
 Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
-Recommends: libpruio-modules-6.10.0-rc7-bone4
+Recommends: libpruio-modules-6.10.0-bone5
 Description: BeagleBoard.org 6.10-bone for am335x
  This metapackage will install linux-image-6.10-bone for am335x in Debian.
