bbb.io-kernel (1.20240814.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/control
+++ b/bbb.io-kernel/suite/bookworm/debian/control
@@ -667,3 +667,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.10.3-bone8
 Description: BeagleBoard.org 6.10-bone for am335x
  This metapackage will install linux-image-6.10-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.11-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.11.0-rc3-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.11.0-rc3-bone1
+Description: BeagleBoard.org 6.11-bone for am335x
+ This metapackage will install linux-image-6.11-bone for am335x in Debian.
