--- a/bbb.io-kernel/suite/trixie/debian/control
+++ b/bbb.io-kernel/suite/trixie/debian/control
@@ -512,3 +512,12 @@ Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
 Recommends: libpruio-modules-6.11.0-bone7
 Description: BeagleBoard.org 6.11-bone for am335x
  This metapackage will install linux-image-6.11-bone for am335x in Debian.
+
+Package: bbb.io-kernel-6.12-bone
+Section: metapackages
+Architecture: armhf
+Pre-Depends: linux-image-6.12.0-rc1-bone1,
+Depends: ${misc:Depends}, bbb.io-kernel-tasks (= ${source:Version})
+Recommends: libpruio-modules-6.12.0-rc1-bone1
+Description: BeagleBoard.org 6.12-bone for am335x
+ This metapackage will install linux-image-6.12-bone for am335x in Debian.
