rcnee-internal-testlab (1.20241105.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/rcnee-internal-testlab/suite/bullseye/debian/control
+++ b/rcnee-internal-testlab/suite/bullseye/debian/control
@@ -12,16 +12,18 @@ Architecture: armhf
 Depends:
  bsdextrautils
  , can-utils
- , default-jre-headless
  , gpiod
  , hdparm
  , lsb-release
  , nfs-common
  , ncdu
+ , openjdk-17-jre-headless
  , pastebinit
  , tree
  , wget
  , wireguard-tools
  , zstd
+Conflicts:
+ openjdk-11-jre-headless
 Description: rcnee-internal-testlab
  rcnee-internal-testlab
